# trickydata-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
data/: trickydata.trickydata
scripts/: sync-data.sh
src/: corpus.rs  decode_as.rs  error.rs  example.rs  lib.rs  native.rs  pairs.rs  query.rs  resolve.rs  rng.rs  sizing.rs  static_data.rs  target.rs
tests/: client.rs  static_macros.rs
trickydata-macros/: Cargo.toml
trickydata-macros/src/: lib.rs
