[package]
name = "trickydata-macros"
description = "static example generation macros for the trickydata corpus (deliberately tricky test inputs)."
homepage = "https://github.com/stestagg/trickydata-rs"
repository = "https://github.com/stestagg/trickydata-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"
include = ["Cargo.toml", "src/**", "data/trickydata.trickydata"]

[lib]
proc-macro = true

[dependencies]
flate2 = "1"
md5 = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
